// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchComponent should have a proper style generator 1`] = `
Object {
  "blueButton": Object {
    "&:hover": Object {
      "backgroundColor": "test3",
    },
    "backgroundColor": "test2",
    "color": "test4",
  },
  "searchButton": Object {
    "test1": Object {
      "paddingLeft": 32,
    },
  },
  "sideBar": Object {
    "test1": Object {
      "marginTop": -16,
      "paddingLeft": 32,
    },
  },
}
`;

exports[`AdvancedSearchComponent should have a proper style generator 2`] = `
Object {
  "blueButton": Object {
    "&:hover": Object {
      "backgroundColor": undefined,
    },
    "backgroundColor": undefined,
    "color": undefined,
  },
  "searchButton": Object {
    "test1": Object {
      "paddingLeft": 32,
    },
  },
  "sideBar": Object {
    "test1": Object {
      "marginTop": -16,
      "paddingLeft": 32,
    },
  },
}
`;

exports[`AdvancedSearchComponent should have a proper style generator 3`] = `
Object {
  "blueButton": Object {
    "&:hover": Object {
      "backgroundColor": undefined,
    },
    "backgroundColor": undefined,
    "color": undefined,
  },
  "searchButton": Object {
    "test1": Object {
      "paddingLeft": 32,
    },
  },
  "sideBar": Object {
    "test1": Object {
      "marginTop": -16,
      "paddingLeft": 32,
    },
  },
}
`;

exports[`AdvancedSearchComponent should render advanced search docTypes with checked values based on fixed invalid props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
              docTypes={
                Array [
                  "179",
                  "202",
                ]
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          docTypes={
            Array [
              "179",
              "202",
            ]
          }
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render advanced search docTypes with checked values based on props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
              docTypes={
                Array [
                  179,
                  202,
                ]
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          docTypes={
            Array [
              179,
              202,
            ]
          }
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render advanced search row based on props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render advanced search with no valid checked docTypes based on invalid props 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "all",
            ]
          }
          key="advanced-search-field-all"
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="all"
          showUnpublishedFields={false}
          value="i feel lucky"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
              docTypes={
                Array [
                  "test",
                  202,
                ]
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={false}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          docTypes={
            Array [
              "test",
              202,
            ]
          }
          fieldRows={
            Array [
              Object {
                "searchField": "all",
                "value": "i feel lucky",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render date range fields 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={true}
          value=""
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DateRangeField)
              disableFuture={true}
              disabled={false}
              locale={
                Object {
                  "ariaLabel": "Add valid date ranges to search between",
                  "captionFn": [Function],
                  "captionTitle": "Created",
                  "combiner": "between",
                  "isUnpublishedField": true,
                  "order": 22,
                  "title": "Created date range",
                  "type": null,
                  "validation": Array [],
                }
              }
              onChange={[Function]}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DateRangeField)
              disableFuture={true}
              disabled={false}
              locale={
                Object {
                  "ariaLabel": "Add valid date ranges to search between",
                  "captionFn": [Function],
                  "captionTitle": "Updated",
                  "combiner": "between",
                  "isUnpublishedField": true,
                  "order": 23,
                  "title": "Updated date range",
                  "type": null,
                  "validation": Array [],
                }
              }
              onChange={[Function]}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render default view 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={false}
          value=""
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={false}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={false}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render default view with open access checked 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={false}
          value=""
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={true}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={true}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should render minimised view 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Show advanced search"
        >
          <pure(KeyboardArrowDownIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={false}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;

exports[`AdvancedSearchComponent should toggle minimised view for advanced search 1`] = `
<form
  id="advancedSearchForm"
  onSubmit={[Function]}
  style={
    Object {
      "padding": 12,
    }
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={24}
  >
    <WithStyles(Grid)
      container={true}
      spacing={40}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "flexGrow": 1,
            "width": 1,
          }
        }
      >
        <WithStyles(Typography)
          variant="headline"
        >
          Advanced search
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
      >
        <WithStyles(IconButton)
          onClick={[Function]}
          tooltip="Hide advanced search"
        >
          <pure(KeyboardArrowUpIcon) />
        </WithStyles(IconButton)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        md={8}
        xs={12}
      >
        <WithStyles(AdvancedSearchRow)
          disabledFields={
            Array [
              "0",
            ]
          }
          key="advanced-search-field-0"
          label=""
          onSearchRowChange={[Function]}
          onSearchRowDelete={[Function]}
          rowIndex={0}
          searchField="0"
          showUnpublishedFields={false}
          value=""
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(DocumentTypeField)
              disabled={false}
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(PublicationYearRangeField)
              disabled={false}
              invalid={false}
              updateYearRangeFilter={[MockFunction]}
              yearFilter={
                Object {
                  "invalid": false,
                }
              }
            />
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(FormControlLabel)
              control={
                <WithStyles(Checkbox)
                  aria-label="Check to search for publications with are only open access / full text"
                  checked={false}
                  disabled={false}
                  onChange={[Function]}
                />
              }
              label="Open access"
            />
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={16}
      style={
        Object {
          "marginTop": 24,
        }
      }
    >
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to add another advanced search field"
          classes={
            Object {
              "root": undefined,
            }
          }
          disabled={true}
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Add another field
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to reset the advanced search"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Reset
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to return to the simple search"
          fullWidth={true}
          onClick={[Function]}
        >
          Simple search
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={true}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={false}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        md={4}
        xs={12}
      >
        <WithStyles(Button)
          aria-label="Click to search eSpace"
          color="primary"
          disabled={false}
          fullWidth={true}
          id="advancedSearchButton"
          onClick={[Function]}
          type="submit"
          variant="contained"
        >
          Search
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
    >
      <WithStyles(Grid)
        item={true}
        style={
          Object {
            "paddingTop": 24,
          }
        }
      >
        <WithStyles(AdvancedSearchCaption)
          className="advanced-search"
          fieldRows={
            Array [
              Object {
                "label": "",
                "searchField": "0",
                "value": "",
              },
            ]
          }
          isOpenAccess={false}
          yearFilter={
            Object {
              "invalid": false,
            }
          }
        />
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</form>
`;
